# serbian-translit-python

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: loc_history.json
.github/workflows/: loc.yml  release.yml  tests.yml
serbian_translit/: __init__.py  _case.py  _engine.py  _protection.py  _roman.py  _rule.py  case.py  cnr.py  letters.py  protection.py  roman.py  rule.py  skip.py  srp.py  table.py  test_transliterate.py  test_transliterator.py  transliterator.py
serbian_translit/data/: rules.yaml  tests.yaml
tests/: test_transliterate.py  tests.yaml
