[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "serbian-translit"
dynamic = ["version"]
description = "Deterministic Serbian and Montenegrin script conversion (Cyrillic ↔ Latin)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Apakabarlabs" }]
keywords = ["serbian", "montenegrin", "transliteration", "script", "conversion", "cyrillic", "latin", "bcms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: Serbian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/apakabarlabs/serbian-translit-python"
Changelog = "https://github.com/apakabarlabs/serbian-translit-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/apakabarlabs/serbian-translit-python/issues"

[tool.setuptools.packages.find]
include = ["serbian_translit*"]

[tool.setuptools.package-data]
serbian_translit = ["data/rules.yaml"]

# Single source of truth for the version. `__init__.py.__version__` is
# resolved at build time by setuptools; runtime code reads the same
# constant directly.
[tool.setuptools.dynamic]
version = { attr = "serbian_translit.__version__" }

[tool.ruff]
line-length = 120
# Match the lowest supported runtime (requires-python above). Bumping
# either without the other splits ruff's UP autofixes from the versions
# users actually run.
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "A",    # flake8-builtins (don't shadow builtins)
    "C4",   # flake8-comprehensions
    "COM",  # flake8-commas
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie (misc bad patterns)
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # flake8-eradicate (dead commented code)
    "PL",   # pylint
    "TRY",  # tryceratops (try/except best practices)
    "PERF", # perflint
    "FURB", # refurb (modern-Python rewrites)
    "RUF",  # ruff-specific
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",    # line too long — handled by formatter
    "B008",    # function calls in argument defaults
    "COM812",  # trailing comma missing — conflicts with formatter
    "ISC001",  # implicit-string-concat — conflicts with formatter
    "PLR2004", # magic value — noisy for width literals like `for width in (2, 1)`
    "TRY003",  # long messages inside exception class — fine here
    "S101",    # use of assert — pytest tests are all assert
    # This library exists to distinguish Cyrillic vs Latin lookalikes.
    # `с` vs `c` in a comment is the whole point; ruff's ambiguous-char
    # warnings would fire on every meaningful docstring.
    "RUF001",  # ambiguous unicode in string
    "RUF002",  # ambiguous unicode in docstring
    "RUF003",  # ambiguous unicode in comment
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
files = ["serbian_translit", "tests"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["serbian_translit"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
